# google_auth_for_pc

./: CLAUDE.md  README.md  pyproject.toml  run_desktop_authenticator.py
src/desktop_authenticator/: app.py  qr.py  totp.py  vault.py
src/desktop_authenticator/ui/: dialogs.py  main_window.py
