[project]
name = "desktop-authenticator"
version = "0.1.0"
description = "Desktop TOTP authenticator (Google Authenticator-compatible) for Windows"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pyotp>=2.9",
    "pyside6>=6.6",
]

[project.scripts]
desktop-authenticator = "desktop_authenticator.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desktop_authenticator"]
